# packages/userm/src/schema/create-permission-request.ts
@@ -20,19 +20,13 @@ export interface CreatePermissionRequest {
      * @type {string}
      * @memberof CreatePermissionRequest
      */
-    'description': string;
-    /**
-     * 
-     * @type {string}
-     * @memberof CreatePermissionRequest
-     */
-    'product'?: string;
+    'description'?: string;
     /**
      * 
      * @type {ProductName}
      * @memberof CreatePermissionRequest
      */
-    'productName': ProductName;
+    'product': ProductName;
 }
 
 
