# packages/userm/src/schema/user-links.ts
@@ -67,13 +67,6 @@ export interface UserLinks {
      * @memberof UserLinks
      * @deprecated
      */
-    'assign-substitute'?: string;
-    /**
-     * 
-     * @type {string}
-     * @memberof UserLinks
-     * @deprecated
-     */
     'add-to'?: string;
     /**
      * 
@@ -82,4 +75,11 @@ export interface UserLinks {
      * @deprecated
      */
     'remove-from'?: string;
+    /**
+     * 
+     * @type {string}
+     * @memberof UserLinks
+     * @deprecated
+     */
+    'assign-substitute'?: string;
 }
